--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
          <li><a href="#">BROWSE</a></li>
          <li><a href="#">DESTINATIONS</a></li>
          <li><a href="#">FLIGHTS</a></li>
+         <li><a href="#">SCHEDULE</a></li>
          <li><a href="#">SEARCH</a></li>
          <li><a href="#">ABOUT</a></li>
       </ul>
    </nav>
    <div>
-      <h2>Now is the time to explore</h2>
+      <h1>Now is the time to explore</h1>
       <p>Visit the land of your dreams</p>
       <a href="#">LEARN MORE</a>
    </div>
