--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <div>
       <h2>Now is the time to explore</h2>
       <p>Visit the land of your dreams</p>
-      <a href="#">LEARN MORE</a>
+      <a href="#" class="divya">LEARN MORE</a>
    </div>
 </header>  
 
